--- a/HotelListingAPI/appsettings.json
+++ b/HotelListingAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelListingDBConnectionString": "Server=KIRT-STRIX;Database=HotelListingDb;User ID=sa;Pwd=NhKU42L3vm;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -17,7 +20,7 @@
       },
       {
         "Name": "Seq",
-        "Args": {"serverUrl": "http://localhost:5341"}
+        "Args": { "serverUrl": "http://localhost:5341" }
       }
     ]
   },
