Added Identity and Token Authentication

--- a/HotelListingAPI/appsettings.json
+++ b/HotelListingAPI/appsettings.json
@@ -2,6 +2,16 @@
   "ConnectionStrings": {
     "HotelListingDBConnectionString": "Server=KIRT-STRIX;Database=HotelListingDb;User ID=sa;Pwd=NhKU42L3vm;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
+
+  "JWTSettings": {
+    "Issuer": "HotelListingAPI",
+    "Audience": "HotelListingAPIClient",
+    "DurationInMinutes": 10,
+    "Key": "this is my custom Secret key for authentication"
+
+  },
+
+
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
